<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:orientation="horizontal"
        android:id="@+id/line1"
        >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="26sp"
	        android:text="@string/currPass" />
	    <EditText
	        android:id="@+id/oldPassEdit"
	        android:layout_width="300dip"
	        android:layout_marginLeft="30dip"
	        android:layout_height="wrap_content"
	        android:password="true"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:id="@+id/line2"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        >
        <TextView
	        android:textSize="26sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/newPass" />
	    <EditText
	        android:id="@+id/newPassEdit"
	        android:layout_marginLeft="55dip"
	        android:layout_width="300dip"
	        android:hint="@string/firstCurrPass"
	        android:layout_height="wrap_content"
	        android:password="true"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:id="@+id/line3"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPassCon" />
        <EditText
            android:id="@+id/newPassEdit1"
            android:layout_width="300dip"
            android:hint="@string/firstCurrPass"
            android:layout_height="wrap_content"
            android:password="true"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="470dip"
        android:orientation="horizontal"
        >
        <Button
            android:textSize="25sp"
            android:id="@+id/okButton"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
</RelativeLayout>
